@@ -1,6 +1,55 @@
 -- RoundCube Webmail update script for MySQL databases
 -- Updates from version 0.1-20051007
 
+ ALTER TABLE `contacts` ADD `name` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `email` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `first_name` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `middle_name` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `last_name` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `edu_title` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `addon` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `nickname` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `company` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `organisation` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `department` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `job_title` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `note` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_work1_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_work2_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_home1_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_home2_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_cell_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_car_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_pager_voice` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_additional` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_work_fax` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_home_fax` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_isdn` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_preferred` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `tel_telex` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `work_street` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `work_zip` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `work_city` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `work_region` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `work_country` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `home_street` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `home_zip` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `home_city` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `home_region` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `home_country` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `postal_street` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `postal_zip` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `postal_city` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `postal_region` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `postal_country` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `url_work` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `role` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `birthday` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `rev` varchar(128) NOT NULL default '';
+ ALTER TABLE `contacts` ADD `lang` varchar(128) NOT NULL default '';
+
+-- RoundCube Webmail update script for MySQL databases
+-- Updates from version 0.1-20051007
 
 ALTER TABLE `session` ADD `ip` VARCHAR(15) NOT NULL AFTER changed;
 ALTER TABLE `users` ADD `alias` VARCHAR(128) NOT NULL AFTER mail_host;
